fix: adjust sidebar on mobile

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -118,4 +118,8 @@
   html {
     @apply text-gray-15;
   }
+
+  body {
+    @apply antialiased;
+  }
 }
